<resources>
    <string name="app_name">AirQI</string>
    <string name="no_connection">Offline! Please check your internet connection</string>
    <string name="ok">OK</string>
    <string name="central_pollution_control_board_s">CENTRAL POLLUTION CONTROL BOARD\'S</string>
    <string name="air_quality_standards">AIR QUALITY STANDARDS</string>
    <string name="air_quality_index_aqi">AIR QUALITY INDEX (AQI)</string>
    <string name="category">CATEGORY</string>
    <string name="_0_50">0–50</string>
    <string name="good">Good</string>
    <string name="_51_100">51–100</string>
    <string name="satisfactory">Satisfactory</string>
    <string name="_101_200">101–200</string>
    <string name="moderate">Moderate</string>
    <string name="_201_300">201–300</string>
    <string name="poor">Poor</string>
    <string name="_301_400">301–400</string>
    <string name="very_poor">Very Poor</string>
    <string name="_401_500">401–500</string>
    <string name="severe">Severe</string>
</resources>